# cam-trap-flow

./: .gitignore  CITATION.cff  README.md  THIRD_PARTY_NOTICES.txt
Launcher_CamTrapFlow_CTF/: CamTrapFlow.spec  Lanzador.py  README.md  config.json
Modulo1_Img2WI/: ExtractorCamtrap.spec  README.md  THIRD_PARTY_NOTICES.txt  requirements.txt
Modulo1_Img2WI/app/: main.py  processor.py  ui_main.py
Modulo2_WI2CamtrapDP/: CONTRIBUTING.md  GUIA_DESARROLLO.md  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  app.py  camtrapdp.spec  requirements.txt
Modulo2_WI2CamtrapDP/camtrapdp/: __init__.py  config.py  processor.py  utils.py  validator.py
Modulo2_WI2CamtrapDP/ui/: camtrapdp.ui
Modulo3_WIsualization/: LICENSE  MANIFEST.in  README.md  WIsualization.spec  pyproject.toml  requirements.txt  run_gui.py
Modulo3_WIsualization/src/humboldt_viz/: __init__.py  __main__.py  ui_main.py
Modulo3_WIsualization/src/humboldt_viz/core/: io_detect.py  plots_mpl.py
